# excited_IONs

./: .env.example  README.md  config.example.json  demo.py  document-to-structured-json.py  output.json  pyproject.toml  requirements.txt  shell.nix
data/: 1-s2.0-S2352940721003279-main_extracted_information.json  Oxidative Medicine and Cellular Longevity - 2017 - Li - Enhancement of Mitochondrial Transfer by Antioxidants in Human.json  Oxidative Medicine and Cellular Longevity - 2017 - Li - Enhancement of Mitochondrial Transfer by Antioxidants in Human.md  Oxidative Medicine and Cellular Longevity - 2017 - Li - Enhancement of Mitochondrial Transfer by Antioxidants in Human_extracted_information.json  biochem-05-00023.json  biochem-05-00023.md  biochem-05-00023_extracted_information.json  s13287-020-01974-3.json  s13287-020-01974-3.md  s13287-020-01974-3_extracted_information.json  s41413-025-00411-6.json  s41413-025-00411-6.md  s41413-025-00411-6_extracted_information.json  s42003-023-04576-w.json
demo_output/: 2312.12345.json
excited_ions/: __init__.py  cli.py  config.py  models.py  pipeline.py
excited_ions/extractors/: __init__.py  ideation_engine.py  metadata_extractor.py  summary_generator.py
excited_ions/fetchers/: __init__.py  arxiv_fetcher.py
jsonToDb/: README.org  docker-compose.yml  json_to_db.py  json_to_db_prototype.py  pyproject.toml  utils.py
pdfToJson/: README.org  document-to-structured-json.py  pdf_to_json.py  pyproject.toml
schemas/: README.org  Schema_Paper_1.json  basic_schema_openai.json  test_schema.json
scripts/michaels_scripts/: feedfetchtest.py  mccayfeeds.opml  scratchpad.py
scripts/pdfs/: jar.cookies
tests/: test_basic.py
