[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excited-ions"
version = "0.1.0"
description = "Scientific paper processing pipeline using LLMs for metadata extraction, summarization, and experiment ideation"
authors = [{name = "Levan Bokeria"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "aiohttp>=3.8.0",
    "asyncio",
    "pathlib",
    "json5>=0.9.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
excited-ions = "excited_ions.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["excited_ions*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true